# sample

ionizer/: .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  package-lock.json  pyproject.toml
ionizer/achievements/: models.py  serializers.py  utils.py
ionizer/activities/: models.py  serializers.py  utils.py
ionizer/attachments/: models.py  urls.py  utils.py  views.py
ionizer/attendances/: models.py  serializers.py  urls.py  utils.py  views.py
ionizer/banners/: apps.py  models.py  serializers.py  urls.py  views.py
ionizer/boards/: models.py  permissions.py  serializers.py  urls.py  views.py
ionizer/calendars/: apps.py  models.py  serializers.py  urls.py  views.py
ionizer/conf.d/: cloudflare_realip.conf  ion.conf
ionizer/emailuser/: apps.py  decorators.py  models.py  permissions.py  serializers.py  urls.py  views.py
ionizer/hits/: apps.py  models.py  utils.py
ionizer/ionizer/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
ionizer/likes/: models.py  utils.py
ionizer/navigations/: apps.py  models.py  serializers.py  urls.py  views.py
ionizer/notification/: models.py  serializers.py  urls.py  utils.py  views.py
ionizer/points/: apps.py  models.py  serializers.py  signals.py  urls.py  utils.py
ionizer/question/: models.py  serializers.py
ionizer/role/: fields.py  models.py  serializers.py  urls.py  utils.py  views.py
ionizer/templates/: email_verification_email.html  reset_password_email.html
ionizer/tsid_pk/: fields.py  utils.py
molecule/: .eslintrc.js  (+9 more)
(+419 files in other folders)
